# esolat-mcp

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  glama.json  pyproject.toml  server.py
.github/workflows/: publish.yml
