[project]
name = "esolat-mcp"
version = "1.0.0"
description = "MCP server for prayer times (JAKIM/global), nearest mosque finder, and Islamic calendar events"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.23.0,<2.0",
    "fastapi>=0.115",
    "uvicorn[standard]",
    "httpx",
]

[project.scripts]
esolat-mcp = "server:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["server"]
